docker/zipkin/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tracing-server
  name: tracing-server
  namespace: pet-clinic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracing-server
  template:
    metadata:
      labels:
        app: tracing-server
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: pet-clinic-app-service-account
      containers:
      - image: "$CONTAINER_IMAGE"
        imagePullPolicy: Always
        name: tracing-server
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 9411
            scheme: HTTP
          initialDelaySeconds: 180
          successThreshold: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /health
            port: 9411
            scheme: HTTP
          initialDelaySeconds: 30
          successThreshold: 1
        ports:
        - containerPort: 9411
          name: http
          protocol: TCP
        securityContext:
          privileged: false
        volumeMounts:
          - name: secrets-store01-inline
            mountPath: /mnt/secrets-store
            readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi: 
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: kv-secrets-pet-clinic-app

---

apiVersion: v1
kind: Service
metadata:
  name: tracing-server
  namespace: pet-clinic
spec:
  selector:
    app: tracing-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9411

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracing-server
  namespace: pet-clinic
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: appGatewaySslCertPetClinic
    appgw.ingress.kubernetes.io/request-timeout: "90"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: $HOST_NAME
    http:
      paths:
      - path: /
        backend:
          service:
            name: tracing-server
            port:
              number: 80
        pathType: Prefix
